--- a/templates/config.html
+++ b/templates/config.html
@@ -80,14 +80,14 @@
 
 <!-- Toast de éxito -->
 <div id="successToast" class="fixed bottom-4 right-4 hidden">
-    <div class="bg-green-100 border border-green-400 text-green-700 px-3 py-2 rounded relative text-xs" role="alert">
-        <span class="block sm:inline">Configuración guardada correctamente</span>
-        <span class="absolute top-0 bottom-0 right-0 px-3 py-2" onclick="hideToast('successToast')">
-            <svg class="fill-current h-4 w-4 text-green-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                <title>Close</title>
+    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative text-sm" role="alert">
+        <span class="block sm:inline pr-8">Configuración guardada correctamente</span>
+        <button class="absolute top-1/2 right-3 transform -translate-y-1/2" onclick="hideToast('successToast')" type="button">
+            <svg class="fill-current h-5 w-5 text-green-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <title>Cerrar</title>
                 <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
             </svg>
-        </span>
+        </button>
     </div>
 </div>
 {% endblock %}
@@ -379,7 +379,7 @@ function removeColorTag(button) {
 function showToast(toastId) {
     const toast = document.getElementById(toastId);
     toast.classList.remove('hidden');
-    setTimeout(() => hideToast(toastId), 3000);
+    setTimeout(() => hideToast(toastId), 5000);
 }
 
 function hideToast(toastId) {
